[package]
name = "zkhe-prover"
edition = "2024"
version = "0.1.0"

[features]
default = []
# Enable Solana SDK interop validation (adds ~1MB to binary, useful for testing compatibility)
solana-interop = ["dep:solana-zk-sdk"]

[dependencies]
bulletproofs      = { version = "4", default-features = true }
curve25519-dalek = { version = "4.1.3", features = [ "alloc", "serde" ] }
curve25519-dalek-ng = "4.1.1"
merlin            = { version = "3" }
rand              = { version = "0.9.2", features = [ "std", "std_rng" ] }
rand_chacha       = "0.9"
serde             = { version = "1", features = [ "derive" ] }
serde_json        = "1"
sha2 = "0.10.9"
solana-zk-sdk = { version = "4", optional = true }
thiserror         = "2.0.17"
zkhe-primitives = { path = "../../primitives/zkhe" }
