[package]
name = "runtime-constants"
publish = false
version = "0.1.0"
[package.authors]
workspace = true
[package.edition]
workspace = true
[package.license]
workspace = true

[dependencies]
smallvec = { workspace = true, default-features = true }
[dependencies.frame-support]
workspace = true
[dependencies.polkadot-primitives]
workspace = true
[dependencies.sp-runtime]
workspace = true

[features]
default = [ "std" ]
std = [
	"frame-support/std",
	"polkadot-primitives/std",
	"sp-runtime/std",
]
